Resource filtering logic moved to the parent pom, using a generic (file-exists based) profile activation strategy. The profile can now be moved into parent POM files (and ease Maven archetype's syntax)